force-app/main/default/objects/Account/fields/c2g__CODATaxCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODATaxCalculationMethod__c</fullName>
    <description>The method of calculating tax in the UK.</description>
    <label>Tax Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gross</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Net of Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>