force-app/main/default/objects/Account/fields/c2g__CODATaxCode1__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODATaxCode1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Code 1</label>
    <referenceTo>c2g__codaTaxCode__c</referenceTo>
    <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
    <relationshipName>AccountsTC1</relationshipName>
    <type>Lookup</type>
</CustomField>