force-app/main/default/objects/Account/fields/c2g__CODAValidatedBillingStreet__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
    <label>ValidatedBillingStreet</label>
    <type>TextArea</type>
</CustomField>