force-app/main/default/objects/Account/fields/c2g__CODAValidatedShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
    <label>ValidatedShippingCountry</label>
    <length>40</length>
    <type>Text</type>
</CustomField>