force-app/main/default/objects/Account/fields/c2g__CODAValidatedShippingPostCode__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
    <label>ValidatedShippingPostCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>