force-app/main/default/objects/Account/fields/c2g__CODAValidatedShippingState__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAValidatedShippingState__c</fullName>
    <label>ValidatedShippingState</label>
    <length>20</length>
    <type>Text</type>
</CustomField>