force-app/main/default/objects/Account/fields/c2g__CODAVATRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
    <label>Tax Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>