force-app/main/default/objects/Account/fields/Campus_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Campus_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campus Consultant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This user is not a designated Campus Consultant.</errorMessage>
        <filterItems>
            <field>User.Cost_Center__c</field>
            <operation>equals</operation>
            <value>16350</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CACs</relationshipName>
    <type>Lookup</type>
</CustomField>