force-app/main/default/objects/Account/fields/Case_Data__c.field-meta.xml
<CustomField>
    <fullName>Case_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created so that a formula can be used to &#39;echo&#39; fields/field values onto the Account object.</description>
    <label>Case Data</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>