force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>This field helps categorize the type of school.</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Christian Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>Historical Black Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>Law School</fullName>
            </value>
            <value>
                <fullName>Medical School</fullName>
            </value>
            <value>
                <fullName>Corporate Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>