force-app/main/default/objects/Account/fields/CDR_Trending_Report_Package__c.field-meta.xml
<CustomField>
    <fullName>CDR_Trending_Report_Package__c</fullName>
    <label>CDR Trending Report Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Data Authorized</fullName>
            </value>
            <value>
                <fullName>Receiving Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>