force-app/main/default/objects/Account/fields/Charitable_Giving__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Giving__c</fullName>
    <label>Charitable Giving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>