force-app/main/default/objects/Account/fields/Charter_Client__c.field-meta.xml
<CustomField>
    <fullName>Charter_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charter Client</label>
    <type>Checkbox</type>
</CustomField>