force-app/main/default/objects/Account/fields/Co_Branded_URL__c.field-meta.xml
<CustomField>
    <fullName>Co_Branded_URL__c</fullName>
    <label>Co-Branded URL</label>
    <type>Url</type>
</CustomField>