force-app/main/default/objects/Account/fields/Contract_Exception__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Exception</label>
    <type>Checkbox</type>
</CustomField>