force-app/main/default/objects/Account/fields/Contract_Exception_Note__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exception_Note__c</fullName>
    <label>Contract Exception Note</label>
    <type>TextArea</type>
</CustomField>