force-app/main/default/objects/Account/fields/CU_Join_Number__c.field-meta.xml
<CustomField>
    <fullName>CU_Join_Number__c</fullName>
    <inlineHelpText>Used to indicate Credit Union number, similar to the OE Code.</inlineHelpText>
    <label>CU Join Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>