force-app/main/default/objects/Account/fields/Current_Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Renewal__c</fullName>
    <label>Current Contract Renewal</label>
    <type>Date</type>
</CustomField>