force-app/main/default/objects/Account/fields/Current_Contract_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Status_Date__c</fullName>
    <label>Current Contract Status Date:</label>
    <type>Date</type>
</CustomField>