force-app/main/default/objects/Account/fields/Current_contract_Year_Q3_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_contract_Year_Q3_Rating__c</fullName>
    <description>This field shows the rating for the third quarter of the clients contract.</description>
    <inlineHelpText>This field shows the rating for the third quarter of the clients contract.</inlineHelpText>
    <label>Current Contract Year Q3 Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>