force-app/main/default/objects/Account/fields/Current_Contract_Year_Q4_Rating__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Year_Q4_Rating__c</fullName>
    <description>This field shows the rating for the fourth quarter of the clients contract.</description>
    <inlineHelpText>This field shows the rating for the fourth quarter of the clients contract.</inlineHelpText>
    <label>Current Contract Year Q4 Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>