force-app/main/default/objects/Account/fields/Custom_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Date__c</fullName>
    <inlineHelpText>This field is required when the Reporting Frequency = Custom</inlineHelpText>
    <label>Custom Date</label>
    <type>Date</type>
</CustomField>