force-app/main/default/objects/Account/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <description>Created By Appirio to store profile name of Self-registering customers. This is how Employer Market specific profiles are assigned appropriately.</description>
    <inlineHelpText>Created By Appirio to store profile name of Self-registering customers. This is how Employer Market specific profiles are assigned appropriately.</inlineHelpText>
    <label>Customer Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>