force-app/main/default/objects/Account/fields/Customizable_Reports_User__c.field-meta.xml
<CustomField>
    <fullName>Customizable_Reports_User__c</fullName>
    <label>Customizable Reports: User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>