force-app/main/default/objects/Account/fields/Customized_MM101_Information__c.field-meta.xml
<CustomField>
    <fullName>Customized_MM101_Information__c</fullName>
    <description>Please describe what is customized about the SALT Courses Setup.</description>
    <inlineHelpText>Please describe what is customized about the SALT Courses Setup.</inlineHelpText>
    <label>Customized SALT Courses Information</label>
    <length>250</length>
    <type>Text</type>
</CustomField>