force-app/main/default/objects/Account/fields/Demog_File__c.field-meta.xml
<CustomField>
    <fullName>Demog_File__c</fullName>
    <inlineHelpText>How does the customer send us their Demographic File?</inlineHelpText>
    <label>Demog File Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Upload</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>