force-app/main/default/objects/Account/fields/Demog_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Demog_File_ID__c</fullName>
    <description>This gets updated by Process Builder when Prod Offerings is added/changed.</description>
    <label>Demog File ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>