force-app/main/default/objects/Account/fields/Description_of_Risk_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Risk_Loss_Reason__c</fullName>
    <label>Description of Risk/Loss Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>