force-app/main/default/objects/Account/fields/Do_Not_Use_Name_for_Promos__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_Name_for_Promos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a client’s contract prohibits us from using their name in our promotions.</description>
    <label>Do Not Use Name for Promos</label>
    <type>Checkbox</type>
</CustomField>