force-app/main/default/objects/Account/fields/EDMS_Communication_Attempts__c.field-meta.xml
<CustomField>
    <fullName>EDMS_Communication_Attempts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EDMS Communication Attempts</label>
    <type>Checkbox</type>
</CustomField>