force-app/main/default/objects/Account/fields/EDMS_Communications_Results__c.field-meta.xml
<CustomField>
    <fullName>EDMS_Communications_Results__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EDMS Communications Results</label>
    <type>Checkbox</type>
</CustomField>