force-app/main/default/objects/Account/fields/EDMS_School_Portfolio_Profile__c.field-meta.xml
<CustomField>
    <fullName>EDMS_School_Portfolio_Profile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EDMS School Portfolio Profile</label>
    <type>Checkbox</type>
</CustomField>