force-app/main/default/objects/Account/fields/Estimated_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Go_Live_Date__c</fullName>
    <label>Estimated Go-Live Date</label>
    <type>Date</type>
</CustomField>