force-app/main/default/objects/Account/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Exception__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Billing Exception</fullName>
            </value>
            <value>
                <fullName>Variable Pricing</fullName>
            </value>
            <value>
                <fullName>Reduced Annual Price</fullName>
            </value>
            <value>
                <fullName>Avoid RFP Processing</fullName>
            </value>
            <value>
                <fullName>School Type Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>