force-app/main/default/objects/Account/fields/Exhibit_A_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_A_Acknowledgement__c</fullName>
    <inlineHelpText>This date reflects when the school acknowledges receipt of the revised Exhibit A in the SALT contract.</inlineHelpText>
    <label>Exhibit &quot;A&quot; &lt;br&gt;Acknowledgement</label>
    <type>Date</type>
</CustomField>