force-app/main/default/objects/Account/fields/FAMS__c.field-meta.xml
<CustomField>
    <fullName>FAMS__c</fullName>
    <label>FAMS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASA Direct</fullName>
            </value>
            <value>
                <fullName>Datatel - Colleague</fullName>
            </value>
            <value>
                <fullName>eCourier</fullName>
            </value>
            <value>
                <fullName>Ed Express</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>HomeGrown</fullName>
            </value>
            <value>
                <fullName>IRIS</fullName>
            </value>
            <value>
                <fullName>Jenzabar CX (CARS)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>PeopleSoft</fullName>
            </value>
            <value>
                <fullName>PowerFAIDS</fullName>
            </value>
            <value>
                <fullName>ScholarNet</fullName>
            </value>
            <value>
                <fullName>SCT Banner</fullName>
            </value>
            <value>
                <fullName>SCT Matrix</fullName>
            </value>
            <value>
                <fullName>SIS</fullName>
            </value>
            <value>
                <fullName>Univers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>