force-app/main/default/objects/Account/fields/fferpcore__IsBillingAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
    <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
    <formula>NOT
            ( ISBLANK(BillingStreet) &amp;&amp;
              ISBLANK(BillingCity) &amp;&amp; 
              ISBLANK(BillingState) &amp;&amp;
              ISBLANK(BillingPostalCode) &amp;&amp;
              ISBLANK(BillingCountry) 
            ) &amp;&amp; 
            ( BillingStreet  =  fferpcore__ValidatedBillingStreet__c ) &amp;&amp;
            ( BillingCity =  fferpcore__ValidatedBillingCity__c ) &amp;&amp;
            ( BillingState =  fferpcore__ValidatedBillingState__c ) &amp;&amp;  
            ( BillingPostalCode =  fferpcore__ValidatedBillingPostalCode__c ) &amp;&amp;
            ( BillingCountry =  fferpcore__ValidatedBillingCountry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
    <label>Billing Address Validated</label>
    <type>Checkbox</type>
</CustomField>