force-app/main/default/objects/Account/fields/fferpcore__IsShippingAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
    <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
    <formula>NOT
            ( ISBLANK(ShippingStreet) &amp;&amp;
              ISBLANK(ShippingCity) &amp;&amp; 
              ISBLANK(ShippingState) &amp;&amp;
              ISBLANK(ShippingPostalCode) &amp;&amp;
              ISBLANK(ShippingCountry) 
            ) &amp;&amp; 
            ( ShippingStreet  =  fferpcore__ValidatedShippingStreet__c ) &amp;&amp;
            ( ShippingCity =  fferpcore__ValidatedShippingCity__c ) &amp;&amp;
            ( ShippingState =  fferpcore__ValidatedShippingState__c ) &amp;&amp;  
            ( ShippingPostalCode =  fferpcore__ValidatedShippingPostalCode__c ) &amp;&amp;
            ( ShippingCountry =  fferpcore__ValidatedShippingCountry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
    <label>Shipping Address Validated</label>
    <type>Checkbox</type>
</CustomField>