force-app/main/default/objects/Account/fields/fferpcore__ValidatedBillingCity__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedBillingCity__c</fullName>
    <label>Validated Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>