force-app/main/default/objects/Account/fields/fferpcore__ValidatedShippingState__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedShippingState__c</fullName>
    <label>Validated Shipping State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>