force-app/main/default/objects/Account/fields/fferpcore__ValidatedShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
    <label>Validated Shipping Street</label>
    <type>TextArea</type>
</CustomField>