force-app/main/default/objects/Account/fields/Finance_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Finance Contacts 2)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>