force-app/main/default/objects/Account/fields/Finance_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Finance Contact 3)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>