force-app/main/default/objects/Account/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <description>This is for Foundation (Grant) processing only.</description>
    <inlineHelpText>Select the type of gift this represents for the Foundation/Grant.</inlineHelpText>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>In-Kind</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Pledge Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>