force-app/main/default/objects/Account/fields/Goal_1__c.field-meta.xml
<CustomField>
    <fullName>Goal_1__c</fullName>
    <description>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module
 
CM - Can be updated after initial pre-implementation meeting, or completed after having initial implementation meeting</description>
    <inlineHelpText>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</inlineHelpText>
    <label>Goal 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>